syntax = "proto3";

package com.salesforce.eventbus.proto;

option java_multiple_files = true;
option java_package = "com.salesforce.eventbus.proto";
option java_outer_classname = "PubSubApi";

service PubSub {
  rpc Publish (PublishRequest) returns (PublishResponse);
  rpc Subscribe (SubscriptionRequest) returns (stream FetchResponse);
  rpc GetTopic (TopicRequest) returns (TopicInfo);
}

enum ReplayPreset {
  REPLAY_PRESET_UNSPECIFIED = 0;
  LATEST = 1;
  EARLIEST = 2;
  CUSTOM = 3;
}

message ReplayId {
  bytes value = 1;
}

message SchemaInfo {
  string schema_id = 1;
  string schema_version = 2;
}

message Event {
  bytes replay_id = 1;
  bytes payload = 2;
}

message PublishRequest {
  string topic_name = 1;
  repeated Event events = 2;
  SchemaInfo schema_info = 3;
}

message PublishResult {
  bool success = 1;
  string error_message = 2;
  int32 status_code = 3;
  ReplayId replay_id = 4;
}

message PublishResponse {
  repeated PublishResult results = 1;
}

message SubscriptionRequest {
  string topic_name = 1;
  ReplayPreset replay_preset = 2;
  ReplayId replay_id = 3;
  uint32 num_requested = 4;
}

message FetchResponse {
  repeated Event events = 1;
  bool pending = 2;
}

message TopicRequest {
  string topic_name = 1;
}

message TopicInfo {
  string topic_name = 1;
  SchemaInfo schema_info = 2;
}
